# fui-rs-demo

./: .gitignore  CNAME  LICENSE.md  README.md  advanced-workers.wasm  advanced.wasm  effindom-runtime-config.js  harness.js  home.wasm  immediate-drawing.wasm  text-fonts.wasm  worker-bootstrap.js  worker-host-services.js
fui-rs-demo-source/: .gitignore  Cargo.toml  (+10 more)
fui-rs-demo-source/crates/routes/advanced/: Cargo.toml
fui-rs-demo-source/crates/routes/advanced/src/: animation_section.rs  external_drop_demo.rs  fetch_section.rs  lib.rs  reorder_demo.rs  worker_section.rs
fui-rs-demo-source/crates/routes/advanced/src/external_drop_demo/: file_copy.rs  model.rs  state.rs
fui-rs-demo-source/crates/routes/advanced/src/reorder_demo/: auto_scroll.rs  drag_state.rs  model.rs  presentation.rs  row_view.rs  state.rs
fui-rs-demo-source/crates/routes/home/: Cargo.toml
fui-rs-demo-source/crates/routes/home/src/: bitmap.rs  controls_images.rs  lib.rs  nested_scroll.rs  page.rs  virtual_list.rs
fui-rs-demo-source/crates/routes/immediate-drawing/: Cargo.toml
fui-rs-demo-source/crates/routes/immediate-drawing/src/: lib.rs
fui-rs-demo-source/crates/routes/immediate-drawing/src/widgets/: bar_chart.rs  dancing_yarn.rs  gauge.rs  mod.rs  paint_canvas.rs  pie_chart.rs  scatter_plot.rs  shared.rs  sparkline.rs  waveform.rs
fui-rs-demo-source/crates/routes/text-fonts/: Cargo.toml
fui-rs-demo-source/crates/routes/text-fonts/src/: custom_font_section.rs  lib.rs  model.rs  rich_text_section.rs  view.rs
fui-rs-demo-source/crates/routes/text-fonts/src/view/: events.rs  login_form.rs  text_area_section.rs
(+17 files in other folders)
